# attnmarkets

./: .dockerignore  .eslintrc.json  .gitignore  README.md  debug.sh  init.sh  localnet-e2e.sh  package.json  pnpm-lock.yaml  run.sh  vercel.json
.github/workflows/: ci.yml
apps/dapp/: .eslintrc.json  middleware.ts  package.json  tailwind.config.ts
apps/dapp-prod/: .env.example  .env.playwright.example  cypress.config.ts  middleware.ts  next.config.js  package.json  playwright.config.ts  tsconfig.json
apps/dapp-prod/app/: globals.css  layout.tsx  page.tsx
apps/dapp-prod/app/actions/: buybackYt.ts  closeMarket.ts  helpers.ts  index.ts  sellYt.ts  split.ts  stakeAttnUsd.ts
apps/dapp-prod/app/actions/__tests__/: helpers.test.ts
apps/dapp-prod/app/components/: AppFooter.tsx  BorrowSlider.tsx  GovernanceBanner.tsx  Navigation.tsx  RepaySlider.tsx  Tooltip.tsx  WalletProviders.tsx  WelcomeGuideModal.tsx
apps/dapp-prod/app/config/: poolConfig.ts  runtime.ts
apps/dapp-prod/app/context/: AppContext.tsx  DataModeContext.tsx
apps/dapp-prod/app/creator/: page.tsx
apps/dapp-prod/app/creator/components/: CreatorTourOverlay.tsx  SquadsSafeOnboarding.tsx
apps/dapp-prod/app/deposit/: page.tsx
apps/dapp-prod/app/hooks/: useETag.ts
apps/dapp-prod/app/idl/: index.ts
apps/dapp-prod/app/leaderboard/: page.tsx
apps/dapp-prod/app/lib/: anchor.ts  api.ts  format.ts  mock-client.ts  programIds.ts
apps/dapp-prod/app/lib/data-providers/: api.ts  bridge.ts  demo.ts  (+2 more)
apps/dapp-prod/app/mint/: page.tsx
apps/dapp-prod/app/redeem/: page.tsx
apps/dapp-prod/app/sponsor/: README.md  constants.ts  page.tsx  safeDetectionEmitter.ts  types.ts
apps/dapp-prod/app/store/: index.ts
apps/dapp-prod/app/trade/: page.tsx
apps/dapp-prod/app/utils/: borrowingCalculations.ts
apps/dapp-prod/cypress/e2e/: advance.cy.ts  live.cy.ts
apps/dapp-prod/cypress/support/: e2e.ts
apps/dapp-prod/public/mock/: creators.json
apps/dapp-prod/scripts/: mock-api-server.js  run-e2e.sh  start-playwright-server.js
apps/dapp-prod/tests/: bridge-proxy.spec.ts  live-onboarding.spec.ts  live-wallet.spec.ts  sponsor-squads-detection.spec.ts
apps/dapp/app/: layout.tsx  page.tsx
apps/dapp/app/components/: Navigation.tsx
apps/dapp/app/config/: runtime.ts
apps/dapp/app/context/: AppContext.tsx  DataModeContext.tsx
apps/dapp/app/creator/: page.tsx
apps/dapp/app/deposit/: page.tsx
apps/dapp/app/leaderboard/: page.tsx
apps/dapp/app/mint/: page.tsx
apps/dapp/app/redeem/: page.tsx
apps/dapp/app/trade/: page.tsx
apps/dapp/app/user/: page.tsx
apps/dapp/app/utils/: borrowingCalculations.ts
apps/dapp/public/mock/: lp_pool.json  user.json
apps/landing/: middleware.ts  package.json  tailwind.config.ts
apps/landing/app/: globals.css  layout.tsx  page.tsx
cloudbuild/: attn-api-fast.yaml  attn-api.yaml
docs/: attn-api-cloud-run.md  attn-fee-reroute-safeguards.md  attn-market-pt-yt-design.md  attn-markets-architecture.md  attn-markets-backend-spec.md  attn-markets-frontend-spec.md  attn-markets-future-work.md  attn-markets-mvp.md  devnet-setup.md  devnet-squads-onboarding.md  incentives-example  sponsor-cto-onboarding.md  squads-grid-vs-attn-defensibility.md  squads-safe-api.md  squads-safe-remediation.md
docs/product/: 10m-arr.md  consumer-credit-risk-sharing.md  credit-risk-pricing.md  defensibility.md  lps-gtm.md
docs/protocol-design/: advance.md  attn-fee-reroute-safeguards.md  attn-market-pt-yt-design.md  attn-markets-architecture.md  attn-markets-backend-spec.md  attn-markets-frontend-spec.md  attn-markets-future-work.md  attn-markets-mvp.md  attn-revenue-bonds-pt-yt-attnusd.md  devnet-setup.md  devnet-squads-onboarding.md  ecosystem-peaq-hyperscale-avici-pye.md  revenue-accounts.md  sponsor-cto-onboarding.md  sponsor-onboarding-status.md  squads-safe-api.md  squads-safe-remediation.md  v0_sign_in_and_get_limit.md
docs/security/: security-review-2025-03-10.md
docs/tasks/: doc-sync-2025-03-10.md
protocol/: Anchor.toml  Cargo.toml  Justfile
protocol/crates/attn_api/: Cargo.toml  Dockerfile  build.rs
protocol/crates/attn_api/src/: advance.rs  kms.rs  main.rs  security.rs  squads.rs
protocol/crates/attn_cli/: Cargo.toml
protocol/crates/attn_cli/src/: main.rs
protocol/crates/attn_client/: Cargo.toml
protocol/crates/attn_client/src/: lib.rs
protocol/crates/attn_indexer/: Cargo.toml
protocol/crates/attn_indexer/migrations/: 001_init.sql  002_rewards.sql  003_ingest.sql  004_governance.sql  005_stable_pause.sql  006_creator_authority.sql  006_squads_safe_requests.sql  007_squads_safe_admin.sql  008_squads_status_sync.sql  009_creator_vault_flags.sql  009_squads_imports.sql  010_creator_vault_fees.sql
protocol/crates/attn_indexer/src/: ingest.rs  lib.rs  main.rs  models.rs  store.rs
protocol/crates/attn_notifier/: Cargo.toml
protocol/crates/attn_notifier/src/: main.rs
protocol/programs/amm/: Cargo.toml
protocol/programs/amm/src/: lib.rs
protocol/programs/creator_vault/: Cargo.toml
protocol/programs/creator_vault/src/: lib.rs
protocol/programs/creator_vault/tests/: creator_vault.rs
protocol/programs/rewards_vault/: Cargo.toml
protocol/programs/rewards_vault/src/: lib.rs
protocol/programs/splitter/: Cargo.toml
protocol/programs/splitter/src/: lib.rs
protocol/programs/splitter/tests/: splitter.rs
protocol/programs/stable_vault/: Cargo.toml
protocol/programs/stable_vault/src/: lib.rs
protocol/shims/try_from/: Cargo.toml
protocol/shims/try_from/src/: lib.rs
protocol/shims/try_from_unchecked/: Cargo.toml
protocol/shims/try_from_unchecked/src/: lib.rs
scripts/: deploy-devnet.sh  deploy-mainnet.sh  grind-attn-multi.sh  grind-attn.sh  setup-build-env.sh
sdk/idl/: creator_vault.json  rewards_vault.json  splitter.json  stable_vault.json
sdk/types/: creator_vault.ts  rewards_vault.ts  splitter.ts  stable_vault.ts
services/squads-safe-worker/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/squads-safe-worker/src/: env.ts  server.ts
services/squads-safe-worker/test/: server.test.js  server.test.ts
(+6 files in other folders)
