[workspace]
members = [
  "crates/attn_api",
  "crates/attn_cli",
  "crates/attn_client",
  "crates/attn_indexer",
  "crates/attn_notifier",
  "programs/stable_vault",
  "programs/creator_vault",
  "programs/splitter",
  "programs/rewards_vault",
  "programs/amm",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "=0.32.0", features = ["init-if-needed"] }
anchor-spl  = "=0.32.0"
anyhow = "1.0.100"
async-trait = "0.1.83"
axum = { version = "0.7.5", features = ["json", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "json", "chrono", "migrate"] }
thiserror = "1.0.69"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
overflow-checks = true
