[package]
name = "attn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
attn_indexer = { path = "../attn_indexer" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = "1.2.0"
http-body-util = "0.1.2"
