[package]
name = "attn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
attn_indexer = { path = "../attn_indexer" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
reqwest = { workspace = true }
bs58 = "0.5"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json", "tls-rustls", "ipnetwork"] }
dashmap = "5.5"
rand = "0.8"
ed25519-dalek = { version = "1", features = ["rand", "std"] }
regex = "1"
base64 = "0.22"
once_cell = "1.19"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
solana-client = "2.3.13"
solana-sdk = "2.3.1"
async-trait = { workspace = true }
gcp_auth = "0.8"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = "1.2.0"
http-body-util = "0.1.2"
httpmock = "0.6"
