[package]
name = "attn_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
attn_client = { path = "../attn_client" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
