[package]
name = "attn_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
attn_client = { path = "../attn_client" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
solana-sdk = "2.3.0"
anchor-client = "0.32.1"
shellexpand = "3.1.0"
rewards_vault = { path = "../../programs/rewards_vault", features = ["no-entrypoint"] }
