[package]
name = "attn_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
attn_client = { path = "../attn_client" }
anchor-client = "0.32.1"
solana-client = "2.3.0"
solana-sdk = "2.3.0"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
futures = "0.3.31"

[dev-dependencies]
serde_json = { workspace = true }
