[package]
name = "creator_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "creator_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
solana-program-test = "1.18.12"
solana-sdk = "1.18.12"
solana-program = "1.18.12"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "2.3.0"
tokio = { workspace = true }
