[package]
name = "rewards_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
solana-program-test = "2.3.0"
solana-program = "2.3.0"
solana-sdk = "2.3.0"
spl-associated-token-account = "7.0.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { workspace = true }
proptest = "1.4.0"
