[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "splitter"

[features]
default = []
program-test = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
creator_vault = { path = "../creator_vault", features = ["cpi"] }
thiserror = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
solana-program = "2.3.0"
spl-token = { version = "4.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"
tokio = { workspace = true }
proptest = "1.5"

[[test]]
name = "splitter"
required-features = ["program-test"]
