[package]
name = "stable_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
thiserror = { workspace = true }
