[package]
name = "stable_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stable_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
try_from = { path = "../../shims/try_from" }
try_from_unchecked = { path = "../../shims/try_from_unchecked" }
